# d810-ng

./: .gitignore  .importlinter  .isort.cfg  AGENTS.md  ARCHITECTURE_PLAN.md  AUTHORS.md  CHERNOBOG.md  D810.py  HEADLESS.md  README.md  REFACTORING.md  TODO.md  docker-compose.yml  ida-plugin.json  pyproject.toml  research.md  setup.py  sgconfig.yml
.github/workflows/: deploy.yml  python.yml  release.yml
d810/: ast.py  cfg_utils.py  emulator.py  hexrays_formatters.py  hexrays_helpers.py  hexrays_hooks.py  log.py  manager.py  manager_info.json  registry.py  utils.py  z3_utils.py
d810/conf/: __init__.py  default_instruction_only.json  default_unflattening_approov.json  eidolon.json  hodur_deobfuscation.json  loggers.py  options.json
d810/expr/: ast.py  emulator.py  z3_utils.py
d810/hexrays/: cfg_utils.py  hexrays_formatters.py  hexrays_helpers.py  tracker.py
d810/log/: log.ini
d810/optimizers/: handler.py
d810/ui/: ida_ui.py  logging_config_dialog.py  testbed.py
docs/: INTERR_51832_ANALYSIS.md  debug-tooling-migration.md  diag-observability-boundary.md
docs/features/: function-rules.md
docs/hodur/: env_flags.md  live_analysis_strategy_boundary.md
docs/plans/: 2026-02-15-mba-state-preconditioner.md  2026-03-10-mba-terminal-return-design.md  2026-03-14-bst-block-removal-investigation.md  2026-03-25-execution-policy-redesign.md  2026-03-31-unflattening-engine-extraction.md  2026-05-16-byte-tail-diagnostic-storage-inventory.md  2026-06-11-agnostic-ir-vocabulary-design.md  2026-06-17-hexrays-hooks-lifecycle-run-later-plan.md
docs/recon/: diagnostic_stack.md  linearized_state_dag.md
rules/: fixpoint-result-without-convergence-check.yml  no-borrowed-mop-storage.yml  no-cfg-diagnostic-storage-imports.yml  no-concrete-isinstance.yml  no-direct-hexrays-mutation-outside-deferred-modifier.yml  no-direct-mutation-in-proof-strategy-modules.yml  no-direct-typing-import.yml  no-hexrays-hook-direct-optimizer-imports.yml  no-hexrays-mutation-diagnostic-storage-imports.yml  no-hexrays-mutation-in-readonly-proof.yml  no-ida-try-import.yml  no-isenabledfor-logging.yml  no-legacy-optimizationstorage.yml  no-live-hexrays-in-pure-cfg.yml  no-live-hexrays-in-terminal-return-audit.yml  no-live-ida-in-portable-core.yml  no-live-object-access-in-portable-core.yml  no-live-runtime-in-diagnostics.yml  no-live-topology-in-engine-strategy-modules.yml  no-lower-layer-optimizer-imports.yml  no-mocks-in-system-tests.yml  no-optimizers-diagnostic-storage-imports.yml  no-print-statement.yml  no-raw-maturity-logging.yml  no-raw-mop-field-access-in-portable-core.yml  no-recon-diagnostic-storage-imports.yml  no-setlevel-int-constant.yml  no-stdlib-logging-import.yml  no-ui-direct-function-rule-storage.yml  no-vendor-identifier-in-portable-core.yml  register-live-lifter-only-in-backends.yml  use-qt-dialog-exec-underscore.yml
samples/: AGENT.md  BUILD.md  Dockerfile.linux  Dockerfile.windows  Makefile  README.md  build_windows.bat  build_windows.ps1  libobfuscated.def
samples/bins/: fake_jumps.dylib  libmba_hard.dylib  libobfuscated.dylib  libobfuscated_darwin_arm64.dylib  libobfuscated_darwin_x86_64.dylib  zygiskd-flattening
samples/include/: export.h  ida_types.h  platform.h  polyfill.h
samples/masm/: sub_7FFD3338C040.asm
samples/restructuring_lab/: AGENTS.md  DESIGN.md  Dockerfile.lab  Makefile  README.md  ROADMAP.md  build_lab.sh
samples/scripts/: build_masm.sh  build_windows.bat  build_windows.ps1  gen_masm_from_idb.py  generate_auto_exports.ps1
samples/src/: Makefile  constant_folding.c  ida_types.h  ollvm_obfuscated.c  tigress_obfuscated.c
scripts/: ununicode.py
src/: D810.py  d810ng.py
src/d810/: __init__.py  _compat.py  cache.py  headless.py  manager.py  project_manager.py  qt_shim.py  registry.py  singleton.py
src/include/: d810_simd.h  pyptr.h  swigpyobject.h
tests/: README.md  TEST_CLASSIFICATION.md  __init__.py  conftest.py
tests/contracts/: conftest.py  test_hexrays_helpers.py
tests/stateless/: conftest.py  test_capture_pseudocode.py  test_convert_jtbl_to_goto.py  test_global_const_inline.py  test_libdeobfuscated_dsl.py  test_profile_libobfuscated.py  test_resize_buffer_cff.py  test_rule_tracking.py  test_unflattening_characterization.py
tests/system/: capture_pseudocode.py  conftest.py  example_capture_usage.py  run_comparison.py  show_diffs.py  show_pseudocode.py  stutils.py  test_ast_comparison.py  test_block_merge.py  test_capture.py  test_capture_integration.py  test_capture_pseudocode.py  test_ctree_hooks.py  test_global_const_inline.py  test_indirect_branch.py  test_indirect_call.py  test_libdeobfuscated.py  test_libdeobfuscated_dsl.py  test_optimization_rule.py  test_profile_libobfuscated.py  test_project_context_integration.py  test_resize_buffer_cff.py  test_rule_tracking.py  test_unflattening_characterization.py  test_unsafe_unflattener.py  test_z3_astproxy_regression.py
tests/unit/: conftest.py  test_block_merge.py  test_cache.py  test_conf.py  test_config_v2_ci_rehearsal.py  test_cycle_detection.py  test_dispatcher_cache_initial_state.py  test_dominators.py  test_ea_validation_logic.py  test_edit_simulator.py  test_egglog_pattern_gen.py  test_global_const_inline.py  test_graph_checks.py  test_headless.py  test_ida_pattern_generation.py  test_indirect_branch.py  test_indirect_call.py  test_loggers.py  (+20 more)
tools/: aarch64_indirect_dispatch_patcher.py  analyze_verify_failures.py  bisect_rule.py  bisect_rule_v2.py  cff_debug.py  check-python-versions  d810_debug.py  d810cli.py  install_speedups.py  python_versions.py  reconstruction_contribution.py  residual_dispatcher_worksheet.py  sub7ffd_tail_corridor_prover.py
(+2636 files in other folders)
