[build-system]
requires = ["setuptools>=77.0.1", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "d810-ng"
requires-python = ">= 3.10"
dynamic = ["version"]
authors = [
    { name = "Boris Batteux", email = "boris.batteux@eshard.com" },
    { name = "w00tzenheimer", email = "w00tzenheimer@gmail.com" },
    { name = "Mahmoud Abdelkader", email = "mabdelkader@gmail.com" },
]
description = "This is a next generation version of D-810, an IDA Pro plugin which can be used to deobfuscate code at decompilation time by modifying IDA Pro microcode."
dependencies = ["z3-solver>=4.13,<4.15.5", "typing-extensions"]

[project.optional-dependencies]
speedups = ["Cython>=3.0.0"]
egraph = ["egglog>=12.0.0", "cloudpickle>=3.0.0"]
dev = [
    "pyinstrument",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-forked>=1.6.0",
    "coverage[toml]>=7.0.0",
    "import-linter>=2.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "d810.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-m", "not profile"]
markers = [
    "pure_python: Tests that run without IDA Pro (fast, no external dependencies)",
    "requires_ida: Tests that require IDA Pro to run",
    "ida_stateless: Tests that require a live IDA runtime but stay state-isolated",
    "contracts: Tests that validate IDA-facing contracts with mocks/stubs",
    "slow: Slow tests (>10s) - typically Z3 verification or complex deobfuscation",
    "profile: marks tests as performance profiling (deselect with '-m \"not profile\"')",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/d810"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
